# cpp-template

./: .gitignore  CMakeLists.txt  a.out  test_combine.cc  test_err.cc  test_fold_exp.cpp  test_forward.cc  test_osync_stream.cc  test_recursive.cc  test_type_traits.cc
01/: main.cc
02/: main.cc
03/: main.cc
04/: answer.h  main.cc
05/: main.cc
06/: main.cc
07/: main.cc
include/: HeavyObject.h  Instrument.h  MyBike.h  Piano.h  Thing.h  Vehicle.h  dbg.h  ingredients.hpp  perftest.h
test_template/: CMakeCache.txt  HeavyObject.cc  Makefile  a.out  adjacent_find.cc  async.cc  class_design.cc  cmake_install.cmake  compound_exercise.cc  enums.cc  formartted_io.cc  generic_program.cc  meeting.csv  moveable_objects.cc  numeric.cc  raii.cc  range_based_for.cc  sequential.cc  set_algorithm.cc  shared_ptr.cc  storage_types.cc  sum_type.cc  test.cc  test_2d_var_para.cc  test_alias.cc  test_apply.cc  test_atomic.cc  test_auto_binding.cc  test_auto_func_para.cc  test_cast.cc  test_comma.cc  test_coroutine.cc  test_decay.cc  test_decltype.cc  test_exchange.cc  test_fold_exp.cc  test_for_each.cc  test_func_forward.cc  test_index_sequence.cc  test_move  (+19 more)
